# osmosismon

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example
checker/: Cargo.toml
checker/src/: is_syncing.rs  message.rs  new_proposal.rs  slashes.rs  validator_status.rs
cmd/: Cargo.toml
cmd/src/: lib.rs  main.rs
config/src/: configs.rs  toml.rs
osmosiscli/: Cargo.toml
osmosiscli/src/: client.rs  lib.rs
