[package]
name = "checker"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
futures = "0.3"
sha2 = "0.10.2"
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview", "base64", "hex"] }

logger = { version = "0.1.0", git = "https://github.com/kumanote/logger-rs", branch = "main", features = ["airbrake"] }
osmosis-grpc-client = { version = "11.0.0", git = "https://github.com/kumanote/osmosis-grpc-client-rs", tag = "v11.0.0.1" }

channel = { path = "../channel" }
osmosiscli = { path = "../osmosiscli" }
crypto = { path = "../crypto" }
config = { path = "../config" }

[dev-dependencies]

[features]
default = []
